# the_method

./: .gitignore  Cargo.toml  chobs.json  db.sqlite
assets/css/: tailwind.css  tailwind.css;
entity/src/entities/: mod.rs  prelude.rs  todo_item.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
templates/: base.html  error.html  hello.html  index.html  item.html
