[package]
name = "the_method"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["fs"]}
